--- a/pyproject.toml
+++ b/pyproject.toml
@@ -12,6 +12,7 @@ django = "^4.2"
 django-extensions = "^3.2.1"
 python-dotenv = "^1.0.0"
 dj-database-url = "^1.3.0"
+django-bootstrap4 = "^23.1"
 
 
 [build-system]
