--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,12 +7,12 @@ readme = "README.md"
 packages = [{include = "hexlet_code"}]
 
 [tool.poetry.dependencies]
-python = ">=3.8"
+python = ">=3.8,<4.0"
 django = "^4.2"
 django-extensions = "^3.2.1"
 python-dotenv = "^1.0.0"
 dj-database-url = "^1.3.0"
-django-bootstrap4 = "^23.1"
+django-bootstrap-v5 = "^1.0.11"
 
 
 [build-system]
