--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,10 +1,10 @@
 [tool.poetry]
 name = "hexlet-code"
 version = "0.1.0"
-description = ""
+description = "Simple task manager in Django"
 authors = ["Nazar Annakhalov <nazar.annahalov@yandex.ru>"]
 readme = "README.md"
-packages = [{include = "hexlet_code"}]
+packages = [{include = "task_manager"}]
 
 [tool.poetry.dependencies]
 python = ">=3.8,<4.0"
