--- a/pyproject.toml
+++ b/pyproject.toml
@@ -13,6 +13,7 @@ django-extensions = "^3.2.1"
 python-dotenv = "^1.0.0"
 dj-database-url = "^1.3.0"
 django-bootstrap-v5 = "^1.0.11"
+django-filter = "^23.2"
 
 
 [build-system]
