--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,7 +7,7 @@ readme = "README.md"
 packages = [{include = "task_manager"}]
 
 [tool.poetry.dependencies]
-python = ">=3.8,<4.0"
+python = ">=3.8.1,<4.0"
 django = "^4.2"
 django-extensions = "^3.2.1"
 python-dotenv = "^1.0.0"
@@ -15,6 +15,9 @@ dj-database-url = "^1.3.0"
 django-bootstrap-v5 = "^1.0.11"
 django-filter = "^23.2"
 
+
+[tool.poetry.group.dev.dependencies]
+flake8 = "^6.0.0"
 
 [build-system]
 requires = ["poetry-core"]
