--- a/pyproject.toml
+++ b/pyproject.toml
@@ -18,9 +18,7 @@ django-filter = "^23.2"
 
 [tool.poetry.group.dev.dependencies]
 flake8 = "^6.0.0"
-pytest = "^7.3.1"
-pytest-django = "^4.5.2"
-pytest-cov = "^4.0.0"
+faker = "^18.7.0"
 
 [build-system]
 requires = ["poetry-core"]
