--- a/pyproject.toml
+++ b/pyproject.toml
@@ -19,6 +19,7 @@ django-filter = "^23.2"
 [tool.poetry.group.dev.dependencies]
 flake8 = "^6.0.0"
 faker = "^18.7.0"
+coverage = "^7.2.5"
 
 [build-system]
 requires = ["poetry-core"]
