--- a/pyproject.toml
+++ b/pyproject.toml
@@ -14,6 +14,7 @@ python-dotenv = "^1.0.0"
 dj-database-url = "^1.3.0"
 django-bootstrap-v5 = "^1.0.11"
 django-filter = "^23.2"
+gunicorn = "^20.1.0"
 
 
 [tool.poetry.group.dev.dependencies]
