--- a/pyproject.toml
+++ b/pyproject.toml
@@ -15,6 +15,7 @@ dj-database-url = "^1.3.0"
 django-bootstrap-v5 = "^1.0.11"
 django-filter = "^23.2"
 gunicorn = "^20.1.0"
+psycopg2-binary = "^2.9.6"
 
 
 [tool.poetry.group.dev.dependencies]
