--- a/pyproject.toml
+++ b/pyproject.toml
@@ -16,6 +16,7 @@ django-bootstrap-v5 = "^1.0.11"
 django-filter = "^23.2"
 gunicorn = "^20.1.0"
 psycopg2-binary = "^2.9.6"
+whitenoise = "^6.4.0"
 
 
 [tool.poetry.group.dev.dependencies]
