--- a/requirements.txt
+++ b/requirements.txt
@@ -14,3 +14,4 @@ soupsieve==2.4.1 ; python_full_version >= "3.8.1" and python_version < "4.0"
 sqlparse==0.4.4 ; python_full_version >= "3.8.1" and python_version < "4.0"
 typing-extensions==4.5.0 ; python_full_version >= "3.8.1" and python_version < "4.0"
 tzdata==2023.3 ; python_full_version >= "3.8.1" and python_version < "4.0" and sys_platform == "win32"
+whitenoise==6.4.0 ; python_full_version >= "3.8.1" and python_version < "4.0"
