--- a/pyproject.toml
+++ b/pyproject.toml
@@ -17,6 +17,7 @@ django-filter = "^23.2"
 gunicorn = "^20.1.0"
 psycopg2-binary = "^2.9.6"
 whitenoise = "^6.4.0"
+rollbar = "^0.16.3"
 
 
 [tool.poetry.group.dev.dependencies]
